T Compiler/tests/phase3tests/error/fieldrefRuntimeError.t
class A
{
  int i;
}

int main()
{
   A a;

   a.i = 17;
}
 
